--- a/premier_codeR.Rmd
+++ b/premier_codeR.Rmd
@@ -58,7 +58,7 @@ ligne_pays( croiss, vari='LAB', codei='TOT', pays=c("FR", "DE", "UK", "ES", "IT"
 
 ###Tests unitaires###
 
-Les tests pour une variable :
+Les tests pour une la France :
 
 ```{r}
 tableau=subset(croiss,var=='LAB' & code=='TOT'& country=='FR')[lignedata]
@@ -83,7 +83,8 @@ kpss.test(serietemp)
 Les trois tests sont cohérents( ils n'ont pas le même H_0) : le log de la série de l'emploi total en France est bien stationnaire.
 
 
-Les fonctions généralisant les tests :
+Les fonctions généralisant les tests : 
+Il reste à les mettre en log !
 
 
 ```{r}
@@ -94,7 +95,7 @@ tableau<-tableau[,-1]
 tableau<-t(tableau)
 tableau=data.frame(tableau)
 tableau
-}
+}#cette fonction permet de créer la database sur laquelle faire les tests
 
 tableau=prepadonnees(croiss, 'LAB', 'TOT')
 ```
@@ -104,19 +105,18 @@ tableau=prepadonnees(croiss, 'LAB', 'TOT')
 multi_stat_tests<- function(tableau){
     p <- ncol(tableau)
     df_multi <- data.frame(var=names(tableau),
-adf.pvalue=sapply(tableau, function(x) adf.test(x[!is.na(x)],alternative = "stationary")$p.value),
-kpss.pvalue=sapply(tableau, function(x) kpss.test(x[!is.na(x)])$p.value),
-PP.pvalue=sapply(tableau, function(x) PP.test(x[!is.na(x)])$p.value)
+adf.pvalue=sapply(tableau, function(x) adf.test(log(x)[!is.na(x)],alternative = "stationary")$p.value),#on fait un test par colonne
+kpss.pvalue=sapply(tableau, function(x) kpss.test(log(x)[!is.na(x)])$p.value),
+PP.pvalue=sapply(tableau, function(x) PP.test(log(x)[!is.na(x)])$p.value)
                            )
     df_multi$adf <- df_multi$adf.pvalue < 0.05
-    df_multi$kpss <- df_multi$kpss.pvalue < 0.05
+    df_multi$kpss <- df_multi$kpss.pvalue < 0.05#son H_O est différent donc ce n'est pas ça qu'on cherche en réalité (je crois)
     df_multi$PP <- df_multi$PP.pvalue < 0.05
     df_multi
 }
-multi_stat_tests(tableau)
 ```
 ```{r}
-
+multi_stat_tests(prepadonnees(croiss, 'LAB', 'TOT'))
 multi_stat_tests(prepadonnees(compte, 'VA', 'TOT'))
 multi_stat_tests(prepadonnees(compte, 'EMP', 'TOT'))
 ```
