--- a/premier_codeR.Rmd
+++ b/premier_codeR.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
 Récupération des données
 
@@ -8,6 +10,8 @@ Récupération des données
 library(ggplot2)
 library(reshape2)
 library("tseries")
+library(forecast)
+library(dplyr)
 ```
 ```{r}
 capital=read.csv("Statistical_Capital.csv")
@@ -16,6 +20,8 @@ travail=read.csv("Statistical_Labour.csv")
 
 compte=read.csv("Statistical_National-Accounts.csv")
 description=read.csv("Variable-Description.csv")
+
+autre_pays=read.csv("WB_data.csv")
 
 ```
 
@@ -26,18 +32,25 @@ date=seq(1995, 2015)
 ```
 
 ```{r}
-ligne_pays<-function(base,vari,codei,pays,variable='var')
+ligne_pays<-function(base,vari,codei,pays,variable='var',diff=0)
 {
 tableau=subset(base,var==vari& code==codei)[c("country", lignedata)] 
 rownames(tableau)<-tableau[,1]
 tableau<-tableau[,-1]
+print(tableau)
 tableau<-t(tableau)
 tabeleau<-tableau[,pays]
-df <- data.frame(x=1995:2017, data.frame(tabeleau))
+i<-0
+while (i<diff){
+  tabeleau=diff(tabeleau)
+  i<-i+1
+} 
+df <- data.frame(x=(1995+diff):2017, data.frame(tabeleau))
 df.melted <- melt(df, id="x")
 qplot(x=x, y=value, color=variable, data=df.melted, geom="line")+ xlab("Date") + ylab(variable)
 }
 ```
+
 
 ```{r}
 ligne_pays( compte, vari="VA", codei='TOT',pays=c("FR", "DE","UK", "ES", "IT") )+ ggtitle("évolution de la production dans les grands pays européens") +
@@ -71,23 +84,32 @@ serietemp=c(log(tableau))
 ```{r}
 adf.test(serietemp)
 ```
-Ici H_0 est : 'non stationnaire' : la p-value est de 96%, on rejette donc l'hypothèse nulle (celle-ci) à 5%.
-Donc, la série est stationnaire. 
+Ici H_0 est : 'non stationnaire' : la p-value est de 96%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 5%.
+Donc, la série est donc stationnaire. 
 #Test de Philipps Perron
 ```{r}
 serietempnum=as.numeric(serietemp)
 PP.test(serietempnum)
 ```
-Ici H_0 est : 'non stationnaire' : la p-value est de 99%, on rejette donc l'hypothèse nulle (celle-ci) à 1%.
-Donc, la série est stationnaire. 
+Ici H_0 est : 'non stationnaire' : la p-value est de 99%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 1%.
+Donc, la série est non stationnaire. 
 #Test KPSS
 ```{r}
 kpss.test(serietemp)
 ```
-Ici H_0 est : 'stationnaire' : la p-value est de 0.01%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 1%.
-Donc, la série est stationnaire. 
+Ici H_0 est : 'stationnaire' : la p-value est de 0.01%, on rejette donc l'hypothèse nulle (celle-ci) à 1%.
+Donc, la série n'est pas stationnaire. 
 
-Les trois tests sont cohérents( ils n'ont pas le même H_0) : le log de la série de l'emploi total en France est bien stationnaire.
+Les trois tests sont cohérents( ils n'ont pas le même H_0) : le log de la série de l'emploi total en France n'est pas stationnaire.
+ 
+```{r}
+forecast::ndiffs(serietempnum, test = "pp")
+```
+```{r}
+plot(diff(diff(serietempnum)))
+pp.test(diff(diff(serietempnum)))
+```
+
 
 
 #Fonction généralisant les tests : 
@@ -105,6 +127,7 @@ tableau
 
 tableau=prepadonnees(croiss, 'LAB', 'TOT')
 #En ligne il y a les années et en colonne les valeurs 
+tableau
 ```
 
 
@@ -112,30 +135,67 @@ tableau=prepadonnees(croiss, 'LAB', 'TOT')
 multi_stat_tests<- function(tableau){
     p <- ncol(tableau)
     df_multi <- data.frame(var=names(tableau),
-    adf.pvalue=sapply(tableau, function(x) adf.test(log(x)[!is.na(x)],alternative = "stationary")$p.value),#on fait un test par colonne
-    kpss.pvalue=sapply(tableau, function(x) kpss.test(log(x)[!is.na(x)])$p.value),
-    PP.pvalue=sapply(tableau, function(x) PP.test(log(x)[!is.na(x)])$p.value)
+    adf.pvalue=sapply(tableau, function(x) adf.test(x[!is.na(x)],alternative = "stationary")$p.value),#on fait un test par colonne
+    kpss.pvalue=sapply(tableau, function(x) kpss.test(x[!is.na(x)])$p.value),
+    PP.pvalue=sapply(tableau, function(x) PP.test(x[!is.na(x)])$p.value)
                            )
     df_multi$adf <- df_multi$adf.pvalue < 0.05
-    df_multi$kpss <- df_multi$kpss.pvalue > 0.95
+    df_multi$kpss <- df_multi$kpss.pvalue > 0.05
     df_multi$PP <- df_multi$PP.pvalue <0.05
+    df_multi$nb_stationnarite <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "kpss"))
     df_multi
 }
 ```
 ```{r}
-#multi_stat_tests(prepadonnees(croiss, 'LAB', 'TOT'))
-#multi_stat_tests(prepadonnees(compte, 'VA', 'TOT'))
+multi_stat_tests(prepadonnees(croiss, 'LAB', 'TOT'))
+multi_stat_tests(prepadonnees(compte, 'VA', 'TOT'))
 multi_stat_tests(prepadonnees(compte, 'EMP', 'TOT'))
 ```
 
 
 
 ```{r}
-ligne_pays( compte, vari="EMP", codei='TOT',pays=c("BG") )+ ggtitle("évolution de l'emploi dans les grands pays européens") +
+ligne_pays( compte, vari="VA", codei='TOT',pays=c("FR"), diff=1 )+ ggtitle("évolution de l'emploi dans les grands pays européens") +
   xlab("année") + ylab("nombre d'emplois en milliers")
 ```
 
+###Les autres pays
+```{r}
+autre_pays$Indicator.Simple[autre_pays$Indicator.Name == "Exports of goods and services (current US$)"] <- "Export"
+autre_pays$Indicator.Simple[autre_pays$Indicator.Name == "GDP (current US$)"] <- "GDP"
+autre_pays$Indicator.Simple[autre_pays$Indicator.Name == "GDP per capita (current US$)"] <- "GDP per capita"
+autre_pays$Indicator.Simple[autre_pays$Indicator.Name == "Gross capital formation (% of GDP)"] <- "Capital formation"
+autre_pays$Indicator.Simple[autre_pays$Indicator.Name == "Unemployment, total (% of total labor force) (modeled ILO estimate)"] <- "Unemployment"
+head(autre_pays)
+
+```
+
+```{r}
+ligne_pays_bis<-function(base,vari,codei,pays,variable='var',paysbis,varbis,echelle=1)
+{
+tableau=subset(base,var==vari& code==codei)[c("country", lignedata)] 
+rownames(tableau)<-tableau[,1]
+tabeleau<-t(tableau[,-1])[,pays]
 
 
+tableau_sup=subset(autre_pays,Indicator.Simple==varbis)[c("Country.Code",lignedata[c(6:23)])]
+rownames(tableau_sup)<-tableau_sup[,1]
+tabeleau_sup<-t(tableau_sup[,-1])[,paysbis]/echelle
+
+
+df <- data.frame(x=(1995):2017, data.frame(tabeleau))
+df2 <- data.frame(x=(2000):2017, data.frame(tabeleau_sup))
+
+df<-full_join(df,df2,by="x")
+
+
+df.melted <- melt(df, id="x")
+qplot(x=x, y=value, color=variable, data=df.melted, geom="line")+ xlab("Date") + ylab(variable)
+}
+ligne_pays_bis( compte, vari='VA', codei='TOT', pays=c("FR", "DE", "UK", "ES", "IT"),varbis="GDP",paysbis=c("AGO","ALB"),echelle=10**5 )
+```
+```{r}
+lignedata[c(6:18)]
+```
 
 
