--- a/premier_codeR.Rmd
+++ b/premier_codeR.Rmd
@@ -38,12 +38,11 @@ ligne_pays<-function(base,vari,codei,pays,variable='var',diff=0)
 tableau=subset(base,var==vari& code==codei)[c("country", lignedata)] 
 rownames(tableau)<-tableau[,1]
 tableau<-tableau[,-1]
-print(tableau)
 tableau<-t(tableau)
 tabeleau<-tableau[,pays]
 i<-0
 while (i<diff){#diff correspond au nombre de retards qui nous intéressent
-  tabeleau=diff(tabeleau)
+  tabeleau=diff(tabeleau)#on prend les variations
   i<-i+1
 } 
 df <- data.frame(x=(1995+diff):2017, data.frame(tabeleau))
@@ -51,6 +50,7 @@ df.melted <- melt(df, id="x")
 qplot(x=x, y=value, color=variable, data=df.melted, geom="line")+ xlab("Date") + ylab(variable)
 }
 ```
+
 
 
 ```{r}
@@ -72,36 +72,36 @@ ligne_pays( croiss, vari='LAB', codei='TOT', pays=c("FR", "DE", "UK", "ES", "IT"
 
 ###Tests unitaires###
 
-Les tests pour une la France :
+Les tests pour la France :
 
-#####Le niveau d'emploi français (var= LAB)
+#####Le PIB français (var= VA)
 ```{r}
 
-tableau=subset(croiss,var=='LAB' & code=='TOT'& country=='FR')[lignedata]
-serietemp=c(log(tableau))
+tableau=subset(compte,var=='VA' & code=='TOT'& country=='FR')[lignedata]
+serietemp=c(log(tableau))#on crée la série voulue
 ```
 
 #Test de Dickey Fuller
 ```{r}
 adf.test(serietemp)
 ```
-Ici H_0 est : 'non stationnaire' : la p-value est de 96%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 5%.
+Ici H_0 est : 'non stationnaire' : la p-value est de 94%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 5%.
 Donc, la série est donc stationnaire. 
 #Test de Philipps Perron
 ```{r}
 serietempnum=as.numeric(serietemp)
 PP.test(serietempnum)
 ```
-Ici H_0 est : 'non stationnaire' : la p-value est de 99%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 1%.
+Ici H_0 est : 'non stationnaire' : la p-value est de 97%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 1%.
 Donc, la série est non stationnaire. 
 #Test KPSS
 ```{r}
 kpss.test(serietemp)
 ```
-Ici H_0 est : 'stationnaire' : la p-value est de 0.01%, on rejette donc l'hypothèse nulle (celle-ci) à 1%.
+Ici H_0 est : 'stationnaire' : la p-value est inférieure à 0.01%, on rejette donc l'hypothèse nulle (celle-ci) à 1%.
 Donc, la série n'est pas stationnaire. 
 
-Les trois tests sont cohérents( ils n'ont pas le même H_0) : le log de la série de l'emploi total en France n'est pas stationnaire.
+Les trois tests sont cohérents( ils n'ont pas le même H_0) : le log de la série de l'emploi total en France n'est pas stationnaire. Chaque test préconise un retard de 2 périodes pour la rendre stationnaire.
  
 ```{r}
 forecast::ndiffs(serietempnum, test = "pp")
@@ -122,7 +122,6 @@ tableau=subset(base,var==vari & code==codei)[c("country", lignedata)]
 rownames(tableau)<-tableau[,1]
 tableau<-tableau[,-1]
 tableau<-t(tableau)
-tableau=data.frame(tableau)
 tableau
 }#cette fonction permet de créer la database sur laquelle faire les tests
 
@@ -134,6 +133,7 @@ tableau
 
 ```{r}
 multi_stat_tests<- function(tableau){
+  tableau=data.frame(tableau)
     p <- ncol(tableau)
     df_multi <- data.frame(var=names(tableau),
     adf.pvalue=sapply(tableau, function(x) adf.test(x[!is.na(x)],alternative = "stationary")$p.value),#on fait un test par colonne
@@ -143,17 +143,24 @@ multi_stat_tests<- function(tableau){
     df_multi$adf <- df_multi$adf.pvalue < 0.05#on compare la p-value avec 5%
     df_multi$kpss <- df_multi$kpss.pvalue > 0.05
     df_multi$PP <- df_multi$PP.pvalue <0.05
-    df_multi$nb_stationnarite <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "kpss"))#on regarde le nombre de retards nécessaires pour que la série soit stationnaire
+    df_multi$nb_stationnariteADF <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "adf"))#on regarde le nombre de retards nécessaires pour que la série soit stationnaire
+    df_multi$nb_stationnariteKPSS <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "kpss"))
+    df_multi$nb_stationnaritePP <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "pp"))
     df_multi
 }
 ```
 ```{r}
-multi_stat_tests(prepadonnees(croiss, 'LAB', 'TOT'))
-multi_stat_tests(prepadonnees(compte, 'VA', 'TOT'))
-multi_stat_tests(prepadonnees(compte, 'EMP', 'TOT'))
+multi_stat_tests(prepadonnees(compte, 'VA', 'TOT'))#le PIB
+multi_stat_tests(prepadonnees(compte, 'EMP', 'TOT'))#le niveau d'emploi
 ```
 
+Il faut au plus deux retards pour rendre ces séries stationnaires, quel que soit le test considéré.
 
+
+```{r}
+multi_stat_tests(diff(diff(prepadonnees(compte, 'VA', 'TOT'))))#le PIB
+multi_stat_tests(diff(diff(prepadonnees(compte, 'EMP', 'TOT'))))#le niveau d'emploi
+```
 
 ```{r}
 ligne_pays( compte, vari="VA", codei='TOT',pays=c("FR"), diff=1 )+ ggtitle("évolution de l'emploi dans les grands pays européens") +
@@ -171,8 +178,10 @@ head(autre_pays)
 
 ```
 
+
+
 ```{r}
-ligne_pays_bis<-function(base,vari,codei,pays,variable='var',paysbis,varbis,echelle=1)
+ligne_pays_bis<-function(base,vari,codei,pays,variable='var',paysbis,varbis,echelle=1)#cette fonction permet d'utiliser à la fois des données de la Banque mondiale et de EU Klems
 {
 tableau=subset(base,var==vari& code==codei)[c("country", lignedata)] 
 rownames(tableau)<-tableau[,1]
@@ -193,8 +202,13 @@ df<-full_join(df,df2,by="x")
 df.melted <- melt(df, id="x")
 qplot(x=x, y=value, color=variable, data=df.melted, geom="line")+ xlab("Date") + ylab(variable)
 }
-ligne_pays_bis( compte, vari='VA', codei='TOT', pays=c("FR", "DE", "UK", "ES", "IT"),varbis="GDP",paysbis=c("AGO","ALB"),echelle=10**5 )
+ligne_pays_bis( compte, vari='VA', codei='TOT', pays=c("FR", "DE", "UK", "ES", "IT"), variable='Valeur ajoutée', varbis="GDP", paysbis=c("AGO","ALB"), echelle=10**5 )
 ```
+Attention, les données WB sont en milliards et les EU Klems en billions !
+
+
+
+
 ```{r}
 lignedata[c(6:18)]
 ```
