--- a/premier_codeR.Rmd
+++ b/premier_codeR.Rmd
@@ -86,7 +86,7 @@ serietemp=c(log(tableau))#on crée la série voulue
 adf.test(serietemp)
 ```
 Ici H_0 est : 'non stationnaire' : la p-value est de 94%, on ne rejette donc pas l'hypothèse nulle (celle-ci) à 5%.
-Donc, la série est donc stationnaire. 
+Donc, la série est stationnaire. 
 #Test de Philipps Perron
 ```{r}
 serietempnum=as.numeric(serietemp)
@@ -98,7 +98,7 @@ Donc, la série est non stationnaire.
 ```{r}
 kpss.test(serietemp)
 ```
-Ici H_0 est : 'stationnaire' : la p-value est inférieure à 0.01%, on rejette donc l'hypothèse nulle (celle-ci) à 1%.
+Ici H_0 est : 'stationnaire' : la p-value est inférieure à 1%, on rejette donc l'hypothèse nulle (celle-ci) à 1%.
 Donc, la série n'est pas stationnaire. 
 
 Les trois tests sont cohérents( ils n'ont pas le même H_0) : le log de la série de l'emploi total en France n'est pas stationnaire. Chaque test préconise un retard de 2 périodes pour la rendre stationnaire.
@@ -136,12 +136,12 @@ multi_stat_tests<- function(tableau){
   tableau=data.frame(tableau)
     p <- ncol(tableau)
     df_multi <- data.frame(var=names(tableau),
-    adf.pvalue=sapply(tableau, function(x) adf.test(x[!is.na(x)],alternative = "stationary")$p.value),#on fait un test par colonne
+    adf.pvalue=sapply(tableau, function(x) adf.test(x[!is.na(x)])$p.value),#on fait un test par colonne
     kpss.pvalue=sapply(tableau, function(x) kpss.test(x[!is.na(x)])$p.value),
     PP.pvalue=sapply(tableau, function(x) PP.test(x[!is.na(x)])$p.value)
                            )
     df_multi$adf <- df_multi$adf.pvalue < 0.05#on compare la p-value avec 5%
-    df_multi$kpss <- df_multi$kpss.pvalue > 0.05
+    df_multi$kpss <- (df_multi$kpss.pvalue < 0.05)==FALSE#on inverse les TRUE et FALSE
     df_multi$PP <- df_multi$PP.pvalue <0.05
     df_multi$nb_stationnariteADF <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "adf"))#on regarde le nombre de retards nécessaires pour que la série soit stationnaire
     df_multi$nb_stationnariteKPSS <- sapply(tableau, function(x) forecast::ndiffs(x[!is.na(x)], test = "kpss"))
@@ -149,18 +149,23 @@ multi_stat_tests<- function(tableau){
     df_multi
 }
 ```
+
+
+
 ```{r}
 multi_stat_tests(prepadonnees(compte, 'VA', 'TOT'))#le PIB
 multi_stat_tests(prepadonnees(compte, 'EMP', 'TOT'))#le niveau d'emploi
 ```
 
-Il faut au plus deux retards pour rendre ces séries stationnaires, quel que soit le test considéré.
+Il faut au plus deux retards pour rendre ces séries stationnaires, quel que soit le test considéré. A noter que False dans la colonne adf ou PP corespond à : on ne rejette pas l'absence de stationnarité (=possilement pas stationnaire), alors que False dans kpss rejette la stationnarité directement (le tout à 5%, et car on a inversé les réponses pour kpss).
 
 
 ```{r}
 multi_stat_tests(diff(diff(prepadonnees(compte, 'VA', 'TOT'))))#le PIB
 multi_stat_tests(diff(diff(prepadonnees(compte, 'EMP', 'TOT'))))#le niveau d'emploi
 ```
+
+Ici aussi, l'interprétation doit se faire avec soin : un TRUE dans adf et PP signifie : on rejette l'absence de stationnarité (on est donc sûr que la série est stationnaire), tandis qu'un TRUE dans kpss signifie : on ne rejette pas la stationnarité.
 
 ```{r}
 ligne_pays( compte, vari="VA", codei='TOT',pays=c("FR"), diff=1 )+ ggtitle("évolution de l'emploi dans les grands pays européens") +
@@ -181,7 +186,7 @@ head(autre_pays)
 
 
 ```{r}
-ligne_pays_bis<-function(base,vari,codei,pays,variable='var',paysbis,varbis,echelle=1)#cette fonction permet d'utiliser à la fois des données de la Banque mondiale et de EU Klems
+ligne_pays_bis<-function(base,vari,codei,pays,variable='var',paysbis,varbis,echelle=1)#cette fonction permet d'utiliser à la fois des données de la Banque mondiale et de EU Klems : pour l'instant, il y a des problèmes d'unités.
 {
 tableau=subset(base,var==vari& code==codei)[c("country", lignedata)] 
 rownames(tableau)<-tableau[,1]
@@ -204,7 +209,7 @@ qplot(x=x, y=value, color=variable, data=df.melted, geom="line")+ xlab("Date") +
 }
 ligne_pays_bis( compte, vari='VA', codei='TOT', pays=c("FR", "DE", "UK", "ES", "IT"), variable='Valeur ajoutée', varbis="GDP", paysbis=c("AGO","ALB",'FRA'), echelle=10**6 )
 ```
-Attention, les données WB sont en milliards et les EU Klems en billions ! (en cours de changement)
+
 
 
 
