--- a/Synthetique v0.Rmd
+++ b/Synthetique v0.Rmd
@@ -68,7 +68,7 @@ Ylab = "Emploi", Xlab = "year", Legend = c("France", "synthetic France"), Legend
 
 ```{r}
 #dataprep.out$X1
-dataprep.out$X0
+dataprep.out$variables.v
 ```
 ```{r}
 #dataprep.out$X1
@@ -83,6 +83,7 @@ synth.tables$tab.w
 ```
 
 ###Le calcul des poids optimaux pour l'ensemble de la période d'optimisation
+
 
 Préparation des donnnées pour l'optimisation
 ```{r}
@@ -99,15 +100,15 @@ f=function(x){norm(Xt-x%*%Xn, type="2")}
 n=function(x){x}#contrainte de positivité des poids (hin(x)>0)
 q=function(x){sum(x)-1}#fonction de la contrainte d'égalité (heq(x)=0)
 opti=auglag(x0, f, hin=n, heq=q)#fonction d'optimisation sur toute la période
-opti$par=matrix(opti$par, nrow=1)#on transforme les poids trouvés en matrice
+matrix(opti$par, ncol=1)
+
 ```
 
-
 ```{r}
- dataprep.out=Synth::dataprep(foo=df.melted,
-                predictors = c("value.x"), #Les variables utilisées en contrôle
+dataprep.out=Synth::dataprep(foo=df.melted,
+                predictors = c("value.x","value.y"), #Les variables utilisées en contrôle
                 predictors.op = "mean", #La manière dont on les prend en compte
-                time.predictors.prior = 2000:2012, #période pré-traitement
+                time.predictors.prior = 2012, #période pré-traitement
                 dependent="value.x", #variable d'intérêt
                 unit.variable = "index", #colonne avec les index des pays
                 unit.names.variable="country", #nom des pays
@@ -117,11 +118,41 @@ opti$par=matrix(opti$par, nrow=1)#on transforme les poids trouvés en matrice
                 time.optimize.ssr = 2000:2012, #période de maximisation
                 time.plot=1995:2017) #période tracée sur le graphique
 
-dataprep.variables.v=opti$par#on remplace le X0 par les poids qu'on a trouvé
-
 synth.out <- Synth::synth(data.prep.obj = dataprep.out, method = "BFGS")
 
 Synth::path.plot(synth.res = synth.out, dataprep.res = dataprep.out,
 Ylab = "Emploi", Xlab = "year", Legend = c("France", "synthetic France"), Legend.position = "bottomright")
+
+
+synth.out$solution.w=opti$par#on remplace les poids par ceux calculés
+
+Synth::path.plot(synth.res = synth.out, dataprep.res = dataprep.out,
+Ylab = "Emploi", Xlab = "year", Legend = c("France", "synthetic France"), Legend.position = "bottomright")
 ```
-Il y a visiblement des choses à améliorer !
+
+```{r}
+ synth.tables <- Synth::synth.tab(dataprep.res = dataprep.out,
+ synth.res = synth.out)
+
+synth.tables$tab.w
+```
+
+```{r}
+calculpoids=function(df.melted){
+Xt=subset(df.melted, country=='FR'& temps<2013 &temps>1999)
+Xt=Xt$value.y#on récupère les données pour la France
+Xn=subset(df.melted, temps<2013 &temps>1999)
+Xn=matrix(Xn$value.y, nrow=26)
+Xn=Xn[c(1:11, 13:26),]#on récupère les autres
+
+x0=c(rep(1/25,25))#on crée un vecteur de départ au hasard
+f=function(x){norm(Xt-x%*%Xn, type="2")}
+n=function(x){x}#contrainte de positivité des poids (hin(x)>0)
+q=function(x){sum(x)-1}#fonction de la contrainte d'égalité (heq(x)=0)
+opti=auglag(x0, f, hin=n, heq=q)#fonction d'optimisation sur toute la période
+matrix(opti$par, ncol=1)}
+```
+```{r}
+calculpoids(df.melted)
+```
+
